Code style fixes.